feat(testing):[TRI-1594] Fix default policy registration