@@ -25,22 +25,24 @@ package org.eclipse.tractusx.irs.policystore.services;
 
 import java.time.Clock;
 import java.time.OffsetDateTime;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 import lombok.extern.slf4j.Slf4j;
 import org.eclipse.tractusx.irs.edc.client.policy.AcceptedPoliciesProvider;
 import org.eclipse.tractusx.irs.edc.client.policy.AcceptedPolicy;
-import org.eclipse.tractusx.irs.policystore.exceptions.PolicyStoreException;
 import org.eclipse.tractusx.irs.edc.client.policy.Constraint;
 import org.eclipse.tractusx.irs.edc.client.policy.Constraints;
-import org.eclipse.tractusx.irs.policystore.models.CreatePolicyRequest;
 import org.eclipse.tractusx.irs.edc.client.policy.OperatorType;
 import org.eclipse.tractusx.irs.edc.client.policy.Permission;
 import org.eclipse.tractusx.irs.edc.client.policy.Policy;
 import org.eclipse.tractusx.irs.edc.client.policy.PolicyType;
+import org.eclipse.tractusx.irs.policystore.exceptions.PolicyStoreException;
+import org.eclipse.tractusx.irs.policystore.models.CreatePolicyRequest;
 import org.eclipse.tractusx.irs.policystore.models.UpdatePolicyRequest;
 import org.eclipse.tractusx.irs.policystore.persistence.PolicyPersistence;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -60,29 +62,40 @@ public class PolicyStoreService implements AcceptedPoliciesProvider {
     private final PolicyPersistence persistence;
 
     public PolicyStoreService(@Value("${apiAllowedBpn:}") final String apiAllowedBpn,
-            @Value("${edc.catalog.policies.allowedNames}") final List<String> allowedPolicies,
-            final PolicyPersistence persistence, final Clock clock) {
+            @Value("${irs-edc-client.catalog.policies.allowedNames}") final List<String> allowedPolicies,
+            final PolicyPersistence persistence, final Clock clock,
+            @Value("${irs-edc-client.catalog.policies.acceptedRightOperands:}") final List<String> acceptedRightOperands,
+            @Value("${irs-edc-client.catalog.policies.acceptedLeftOperands:}") final List<String> acceptedLeftOperands) {
         this.apiAllowedBpn = apiAllowedBpn;
-        this.allowedPoliciesFromConfig = allowedPolicies.stream()
-                                                        .map(p -> new Policy(p, OffsetDateTime.now(),
-                                                                OffsetDateTime.now().plusYears(
-                                                                        DEFAULT_POLICY_LIFETIME_YEARS),
-                                                                createPermissionFrom(p)))
-                                                        .toList();
+
+        this.allowedPoliciesFromConfig = new ArrayList<>();
+        acceptedRightOperands.forEach(rightOperand -> allowedPoliciesFromConfig.addAll(
+                allowedPolicies.stream().map(policy -> createPolicy(policy, policy, rightOperand)).toList()));
+        acceptedLeftOperands.forEach(leftOperand -> allowedPoliciesFromConfig.addAll(
+                allowedPolicies.stream().map(policy -> createPolicy(policy, leftOperand, policy)).toList()));
+
         this.persistence = persistence;
         this.clock = clock;
     }
 
-    private List<Permission> createPermissionFrom(final String name) {
-        return List.of(new Permission(PolicyType.USE,
-                List.of(new Constraints(List.of(new Constraint("PURPOSE", OperatorType.EQ, List.of(name))),
-                        Collections.emptyList()))));
+    @NotNull
+    private Policy createPolicy(final String policyId, final String leftOperand, final String rightOperand) {
+        return new Policy(policyId, OffsetDateTime.now(), OffsetDateTime.now().plusYears(DEFAULT_POLICY_LIFETIME_YEARS),
+                createPermissionFrom(leftOperand, rightOperand));
+    }
+
+    private List<Permission> createPermissionFrom(final String leftExpression, final String rightExpression) {
+        return List.of(new Permission(PolicyType.USE, List.of(new Constraints(
+                List.of(new Constraint(leftExpression, OperatorType.EQ, List.of(rightExpression))),
+                Collections.emptyList()))));
     }
 
     public void registerPolicy(final CreatePolicyRequest request) {
         log.info("Registering new policy with id {}, valid until {}", request.policyId(), request.validUntil());
         try {
-            persistence.save(apiAllowedBpn, new Policy(request.policyId(), OffsetDateTime.now(clock), request.validUntil(), request.permissions()));
+            persistence.save(apiAllowedBpn,
+                    new Policy(request.policyId(), OffsetDateTime.now(clock), request.validUntil(),
+                            request.permissions()));
         } catch (final PolicyStoreException e) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage(), e);
         }
